force-app/main/default/objects/CollectionExceptions__mdt/CollectionExceptions__mdt.object-meta.xml
<CustomObject>
    <label>Collection Exceptions</label>
    <pluralLabel>Collection Exceptions</pluralLabel>
</CustomObject>