force-app/main/default/objects/CollectionExceptions__mdt/fields/CaseOwnerId__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnerId__c</fullName>
    <label>Case Owner Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>