force-app/main/default/objects/CollectionExceptions__mdt/fields/CaseRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>CaseRecordTypeId__c</fullName>
    <label>Case Record Type Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>