force-app/main/default/objects/CollectionExceptions__mdt/fields/CaseStatus__c.field-meta.xml
<CustomField>
    <fullName>CaseStatus__c</fullName>
    <label>Case Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>