force-app/main/default/objects/CollectionExceptions__mdt/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <label>Case Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>